build: add initial backend dependencies and .gitignore.

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -38,4 +38,13 @@ yarn-error.log*
 
 # typescript
 *.tsbuildinfo
-next-env.d.ts
+
+# editor
+.vscode/*
+!.vscode/extensions.json
+.idea
+
+# system
+.DS_Store
+Thumbs.db
+
